--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -187,7 +187,7 @@
 @include respond(phone) {
 
     .site-nav, .nav-main__header {
-        z-index: 4;
+        z-index: 5;
         width: 0;
         opacity: 0;
         //right: 0;
@@ -322,7 +322,7 @@
         position: fixed;
         right: -10rem;
         top: -100vh;
-        z-index: 3;
+        z-index: 4;
         //background-color: $color-primary-green-med;
         background-image: linear-gradient(60deg, transparent 0%, transparent 50%, $color-primary-green-med 50%, $color-primary-green-med 100%);
         background-repeat: no-repeat;
